--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,13 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+MagicWars/Ecs.Core/Properties/AssemblyInfo.cs
+MagicWars/Ecs.Core/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+MagicWars/Ecs.Core/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+MagicWars/Ecs.Core/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+*.txt
+MagicWars/Ecs.Core/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+*.cache
+*.dll
+*.pdb
+*.suo
